@@ -1,0 +1,27 @@
+worker_processes  1;
+
+events {
+    worker_connections  1024;
+}
+
+http {
+    server {
+      server_name supersecret.net;
+      listen 443;
+
+      ssl on;
+      ssl_certificate supersecret_net.pem;
+      ssl_certificate_key supersecret_net.pem;
+
+      set $ngo_client_id "abc-def.apps.googleusercontent.com";
+      set $ngo_client_secret "abcdefg-123-xyz";
+      set $ngo_secure_cookies "true";
+      set $ngo_token_secret "SuPeRsEcReT";
+
+      lua_code_cache off;
+      access_by_lua_file "../access.lua";
+
+      header_filter_by_lua "ngx.header.content_length = nil";
+      body_filter_by_lua_file "../body_filter.lua";
+    }
+}
