@@ -1,3 +1,8 @@
+master
+======
+
+* Added dev/test environment setup.
+
 1.1.0
 ======
 
